# ufdbGuard

./: ufdbGuard.spec.CentOS7
.gear/: rules
ufdbGuard/: CHANGELOG  COPYING  CREDITS  Makefile.in  README  configure  configure.in  install-sh  makedist.sh  test.sh
ufdbGuard/doc/: Makefile.in  README  install_man.sh  ufdbAnalyse.1  ufdb_analyse_urls.1  ufdb_analyse_users.1  ufdb_top_urls.1  ufdb_top_users.1  ufdbgclient.8  ufdbguardd.8  ufdbhttpd.8  ufdbupdate.8
ufdbGuard/samples/: Makefile.in  URLblocked.cgi  execdomainlist.sh  execuserlist.sh
ufdbGuard/src/: Makefile.in  check_config_file  check_dns  check_gdb  config.h.in  crypt.c  d0  domains0.in  domains1.in  domains4.in  engine.c  genTable.c  get_safesearch_list  httpsQueue.c  httpsQueue.h  httpserver.c  httpserver.h  init.ufdbguard.in  inline-strcmp-dword.c  inline-strcmp-sse42.c  install_etcfiles.sh.in  install_log.sh  iptst.c  ipv6.c  lex.yy.c.flex  perftest1.c  safesearch.list  sg.h.in  sg.l  sg.y  sgDiv.c  sgLog.c  ss.c  strcmpurlpart.static.c  tst0.domains  tst1.domains  tstu  u0  ufdb-analyse.in  ufdb-api-private.h  (+35 more)
ufdbGuard/src/images/: default.flv  default.mpeg  default.wmv
ufdbGuard/src/mtserver/: FLOW  Makefile.in  THREADS  cachetest  domains  domains.ufdb  facebook_users.txt  hashtest.sh  https.in.500  https.in.800  https.in2.500  in.500  in.50000  in.ttt  loopquery  lurl  peektest.sh  privuserlist  sysconfig.ufdbguard  sysconfig.ufdbguard.in  test_longurl  test_t10  ufdb-pstack.in  ufdb.sh.in  ufdbGuard-aaa.conf  ufdbGuardFULL.conf  ufdbGuardV.conf  ufdbGuardV2.conf  ufdbgclient.c  ufdbguardd.c  ufdbsignal.c  url.txt  urls  valgrsupp
ufdbGuard/src/mtserver/security/: domains  domains.ufdb
ufdbGuard/test/: Makefile.in  requests  test1.expected  test2.expected
ufdbGuard/test/blacklist/: expression-error
ufdbGuard/test/blacklist/checked/: domains.ufdb  urls
ufdbGuard/test/blacklist/mylist/: domains  domains.ufdb  urls
ufdbGuard/test/blacklist/proxies/: domains  expressions
ufdbGuard/test/blacklist/security/: cacerts
